2015-09-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_calloc.c,
	* device/lib/_free.c,
	* device/lib/_heap.c,
	* device/lib/_malloc.c,
	* device/lib/_realloc.c: renamed all _sdcc_* to __sdcc_*,
	  removed register keywords,
	  changed _sdcc_heap_size to __sdcc_last_memheader,
	  removed init_dynamic_memory() and other optimizations
	* support/regression/tests/malloc.c: added test for size overflow

2015-09-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-pr28982a.c:
	  Enabled for the r2k and r3ka ports.

2015-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/calloc.c,
	  device/lib/malloc.c,
	  device/lib/realloc.c,
	  device/lib/free.c:
	  Use typedefs for memory block header type, use more pointers to __xdata.
	* device/include/stdlib.h,
	  device/include/malloc.h:
	  Move memory management to stdlib.h, fix stdlib.h inclusion.

2015-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/asm/*/features.h,
	  device/include/malloc.h,
	  device/lib/calloc.c,
	  device/lib/malloc.c,
	  device/lib/realloc.c,
	  device/lib/free.c,
	  support/regression/tests/malloc.c:
	  First version of new, more efficient memory management.

2015-09-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c:
	  Fix bugs in genOr() and genXor() while operands are longlong.
	* support/regression/tests/longlong.c:
	  Enable more tests.

2015-09-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	* src/SDCCast.c:
	* src/SDCCerr.c:
	* src/SDCCicode.c:
	  Disable nested critical block / function call, support return in inline critical functions.
	* support/regression/tests/critical.c:
	  Improve test case.
	* support/regression/tests/malloc.c:
	  fix a small spot.

2015-09-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c: